tests/type_errors/pipeline_length_wrong_type.nos
# expect_error: expected List, String, Tuple, or Array
# Pipeline operator should check that methods exist on the type
main() = 42 |> length
